--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.1
+  syncfusion_flutter_calendar: ^20.4.38
 
 dev_dependencies:
   flutter_lints: ^2.0.0
