--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^8.1.1
   http: ^0.13.5
+  shimmer: ^2.0.0
   syncfusion_flutter_calendar: ^20.4.38
 
 dev_dependencies:
